<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorPrimary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/bio_alumni"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nama_t_t" />

                <EditText
                    android:id="@+id/isinama"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Masukan Nama" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/jenis_kelamin_t" />
                <RadioGroup
                    android:layout_width="match_parent"
                    android:id="@+id/jk"
                    android:layout_height="wrap_content">
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/laki_laki" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/perempuan" />
                </RadioGroup>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/jurusan_t_t_t_t_t_t" />

                <Spinner
                    android:id="@+id/jurusan"
                    android:entries="@+array/pilihjurusan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"></Spinner>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tahun_lulus_t_t_t_t_t" />

                <Spinner
                    android:id="@+id/thnlulus"
                    android:entries="@+array/lulus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"></Spinner>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tempat_lahir_t_t" />

                <EditText
                    android:id="@+id/tempatlahir"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:hint="Masukan Tempat Lahir" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tanggal_lahir_t" />

                <EditText
                    android:id="@+id/tanggallahir"
                    android:layout_width="wrap_content"
                    android:text=""
                    android:layout_height="wrap_content"
                    android:hint="dd/MM/yyyy" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pendidikan_sekarang_t_t"/>
                <RadioGroup
                android:layout_width="match_parent"
                android:id="@+id/ps"
                android:layout_height="wrap_content">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kuliah" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kerja" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wirausaha"/>
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nganggur"/>
            </RadioGroup>


                <Button
                    android:id="@+id/simpan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/simpan"
                    android:background="@color/black"
                    android:textColor="@color/white"/>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>


